height fix on mobile

--- a/src/pages/RadioPage.css
+++ b/src/pages/RadioPage.css
@@ -7,7 +7,6 @@ body {
   flex-direction: column;
   align-items: flex-end;
   position: relative;
-  min-height: -webkit-fill-available;
 }
 
 .avatar-img {
